--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 
 /* Start Styling the Project */
  .container {
-        padding-left: 200px;
-        margin-left: 20px;
+        padding:  0 200px;
+        margin-left: -140px;
         transform: translate(50%, 50%);
         display: flex;
         flex-direction: column;
@@ -37,5 +37,10 @@
     font-size: 18px;
     font-weight: normal;
     text-transform: uppercase;
+    cursor: pointer;
+}
+.container .button-container .btn:hover {
+color: white;
+background-color: black;
 }
 /* End Styling the Project */
